@startuml
title Sustainable Packaging Service
class ShipmentService {
  + findShipmentOption(Item, FulfillmentCenter) : ShipmentOption
}
class PackagingDAO {
  + findShipmentOptions(Item, FulfillmentCenter) : List<ShipmentOption>
}

class PackagingDatastore {
  + getFcPackagingOptions() : List<FcPackagingOption>
}

class Item {
  -asin: String
  -description: String
  -length: BigDecimal
  -width: BigDecimal
  -height: BigDecimal
}

class FulfillmentCenter {
  -fcCode: String
}

class ShipmentOption {
  -item: Item
  -packaging: Packaging
  -fulfillmentCenter: FulfillmentCenter
  + equals(Object)
  + hashCode()
}

class ShipmentCost {
  -shipmentOption: ShipmentOption
  -cost: BigDecimal
}

class Packaging {
  -material: Material
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}

enum Material {
  + CORRUGATE
  + LAMINATED_PLASTIC
}

class FcPackagingOption {
  -fulfillmentCenter: FulfillmentCenter
  -packaging: Packaging
}

interface CostStrategy<<interface>> {
  +getCost(ShipmentOption): ShipmentCost
}

class MonetaryCostStrategy {
}
class Box{
-length: BigDecimal
  -width: BigDecimal
  -height: BigDecimal
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}
class PolyBag{
-volume:BigDecimal
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}

ShipmentService o-- PackagingDAO
ShipmentService o- CostStrategy
PackagingDAO o-- FcPackagingOption
PackagingDAO <-- PackagingDatastore
FcPackagingOption o-- FulfillmentCenter
FcPackagingOption o-- Packaging
Packaging *- Material
ShipmentOption o-- Item
ShipmentOption o-- Packaging
ShipmentOption o-- FulfillmentCenter
CostStrategy o- ShipmentCost
Box --|> Packaging
PolyBag --|> Packaging
CostStrategy <|.. MonetaryCostStrategy
@enduml
